Firefox word wrap fixed

--- a/CSS/main.css
+++ b/CSS/main.css
@@ -106,8 +106,6 @@ article {
 
     overflow-wrap: break-word;
     word-wrap: break-word;
-    -ms-word-break: break-all;
-    word-break: break-all;
     word-break: break-word;
     -ms-hyphens: auto;
     -moz-hyphens: auto;
